--- a/index.html
+++ b/index.html
@@ -55,19 +55,19 @@
         <h3 class="text-4xl font-semibold mb-10 text-black text-center">Multitools</h3>
         <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8 max-w-6xl mx-auto">
             <!-- QR Code Generator -->
-            <a href="https://toolsbynoah.pages.dev/qr" target="_blank" class="glass-effect p-8 rounded-lg hover-scale flex flex-col items-center transition cursor-pointer">
+            <a href="https://multi-tools.pages.dev/qr" target="_blank" class="glass-effect p-8 rounded-lg hover-scale flex flex-col items-center transition cursor-pointer">
                 <i class="fas fa-qrcode text-5xl text-teal-400 mb-4"></i>
                 <h4 class="text-2xl font-semibold mb-2">QR Code Generator</h4>
                 <p class="text-gray-300 text-center">Generate QR codes for links, text, and more.</p>
             </a>
             <!-- CPS Tester -->
-            <a href="https://toolsbynoah.pages.dev/cps" target="_blank" class="glass-effect p-8 rounded-lg hover-scale flex flex-col items-center transition cursor-pointer">
+            <a href="https://multi-tools.pages.dev/cps" target="_blank" class="glass-effect p-8 rounded-lg hover-scale flex flex-col items-center transition cursor-pointer">
                 <i class="fas fa-mouse-pointer text-5xl text-teal-400 mb-4"></i>
                 <h4 class="text-2xl font-semibold mb-2">CPS Tester</h4>
                 <p class="text-gray-300 text-center">Test your clicks per second speed.</p>
             </a>
             <!-- WPM Tester -->
-            <a href="https://toolsbynoah.pages.dev/wpm" target="_blank" class="glass-effect p-8 rounded-lg hover-scale flex flex-col items-center transition cursor-pointer">
+            <a href="https://multi-tools.pages.dev/wpm" target="_blank" class="glass-effect p-8 rounded-lg hover-scale flex flex-col items-center transition cursor-pointer">
                 <i class="fas fa-keyboard text-5xl text-teal-400 mb-4"></i>
                 <h4 class="text-2xl font-semibold mb-2">WPM Tester</h4>
                 <p class="text-gray-300 text-center">How fast can you type? Find out your words per minute.</p>
