--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
                 <h4 class="text-2xl font-semibold mb-2">WPM Tester</h4>
                 <p class="text-gray-300 text-center">How fast can you type? Find out your words per minute.</p>
             </a>
+            <a href="https://multi-tools.pages.dev/spin-the-wheel" target="_blank" class="glass-effect p-8 rounded-lg hover-scale flex flex-col items-center transition cursor-pointer">
+                <i class="fas fa-keyboard text-5xl text-teal-400 mb-4"></i>
+                <h4 class="text-2xl font-semibold mb-2">Spin The Wheel</h4>
+                <p class="text-gray-300 text-center">Don't know which to choose? Let it be random!</p>
+            </a>
         </div>
     </section>
     <script>
