--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <p class="text-gray-300 text-center">Don't know which to choose? Let it be random!</p>
             </a>
             <a href="https://multi-tools.pages.dev/color-tools" target="_blank" class="glass-effect p-8 rounded-lg hover-scale flex flex-col items-center transition cursor-pointer">
-                <i class="fas fa-paint-brush"></i>
+                <i class="fas fa-paint-brush text-5xl text-teal-400 mb-4"></i>
                 <h4 class="text-2xl font-semibold mb-2">Color Tools</h4>
                 <p class="text-gray-300 text-center">HEX,RBG,Random Color and more!</p>
             </a>
