--- a/index.html
+++ b/index.html
@@ -82,6 +82,11 @@
                 <h4 class="text-2xl font-semibold mb-2">Color Tools</h4>
                 <p class="text-gray-300 text-center">HEX,RBG,Random Color and more!</p>
             </a>
+            <a href="https://www.youtube.com/channel/UCmbrEF2TItb2VqInsxsI9zA/posts" target="_blank" class="glass-effect p-8 rounded-lg hover-scale flex flex-col items-center transition cursor-pointer">
+                <i class="fas text text-5xl text-teal-400 mb-4"></i>
+                <h4 class="text-2xl font-semibold mb-2">Coming Soon...</h4>
+                <p class="text-gray-300 text-center">Comment ideas</p>
+            </a>
         </div>
     </section>
     <script>
